--- a/index.html
+++ b/index.html
@@ -29,17 +29,26 @@
     <link rel="stylesheet" href="./dist/output.css" />
     <title>Gambit Rojo</title>
   </head>
-  <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
-  <script src="./src/script.js"></script>
+
   <body>
+    <!-- Custom cursor -->
+    <div
+      id="cursor1"
+      class="fixed w-[14px] h-[14px] bg-[#B5FBFF] rounded-full translate-x-[-50%] translate-y-[-50%] pointer-events-none z-50"
+    ></div>
+    <div
+      id="cursor2"
+      class="fixed w-[52px] h-[52px] border-[#258287] border rounded-full translate-x-[-50%] translate-y-[-50%] duration-500 ease-out bg-transparent z-[-1] pointer-events-none"
+    ></div>
+
     <!-- Navbar goes here -->
-    <nav class="bg-[#070C0F] border-gray-200">
+    <nav class="bg-transparent border-gray-200">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
       >
         <a
           href="/"
-          class="flex items-center font-outfit font-bold text-2xl"
+          class="flex items-center font-outfit font-bold text-2xl cursor-none"
         >
           <h1 class="text-[#00B0FF]">
             Gambit<span class="text-white">Rojo</span>
@@ -77,7 +86,7 @@
             <li>
               <a
                 href="#"
-                class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-[#47ABD8] md:p-0 font-semibold"
+                class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-[#47ABD8] md:p-0 font-semibold cursor-none"
                 aria-current="page"
                 >Home</a
               >
@@ -85,21 +94,21 @@
             <li>
               <a
                 href="#"
-                class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal"
+                class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal cursor-none"
                 >Expertise</a
               >
             </li>
             <li>
               <a
                 href="#"
-                class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal"
+                class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal cursor-none"
                 >Insight</a
               >
             </li>
             <li>
               <a
                 href="#"
-                class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal"
+                class="block py-2 pl-3 pr-4 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:p-0 font-normal cursor-none"
                 >About You</a
               >
             </li>
@@ -109,18 +118,18 @@
     </nav>
 
     <!-- Hero goes here -->
-    <section class="w-full min-h-[90vh] mb-10">
+    <section class="w-full min-h-[90vh]">
       <div
         class="w-full h-[90vh] text-center relative flex flex-col justify-center overflow-x-hidden"
       >
         <div class="w-full relative flex flex-col text-center">
           <h1
-            class="font-inter font-thin text-white text-[130px] leading-[0px]"
+            class="font-inter font-thin text-white text-[120px] leading-[0px]"
           >
-            We are Social Media
+            We are a Social Media
           </h1>
           <h1
-            class="font-outfit font-bold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF] text-[182px] drop-shadow-lg"
+            class="font-outfit font-bold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] text-[182px] drop-shadow-lg bg-size-200 bg-pos-0 hover:bg-pos-100 transition-all duration-300"
           >
             Digital Agency
           </h1>
@@ -164,8 +173,96 @@
     </section>
 
     <!-- About 1 goes here -->
-    <div class="w-full mx-auto container h-96 bg-red-400">
-      <div class="w-full h-48 bg-red-700"></div>
+    <div class="w-full mx-auto container my-24">
+      <div class="w-full px-24 grid grid-cols-2 gap-[48px]">
+        <div class="w-full flex gap-3 justify-around">
+          <div class="flex flex-col gap-2 items-center">
+            <h1
+              class="font-outfit font-bold text-8xl text-transparent bg-clip-text bg-gradient-radial from-[#00B0FF] to-[#070C0F]"
+            >
+              50+
+            </h1>
+            <h3
+              class="font-inter text-white text-center font-light text-xl"
+            >
+              Projects<br />Done
+            </h3>
+          </div>
+          <div class="flex flex-col gap-2 items-center">
+            <h1
+              class="font-outfit font-bold text-8xl text-transparent bg-clip-text bg-gradient-radial from-[#00B0FF] to-[#070C0F]"
+            >
+              2020
+            </h1>
+            <h3
+              class="font-inter text-white text-center font-light text-xl"
+            >
+              Company<br />Start
+            </h3>
+          </div>
+        </div>
+        <div class="w-full flex items-center">
+          <p class="font-inter text-white font-light text-2xl">
+            Lorem ipsum dolor sit amet consectetur. Id risus auctor
+            malesuada natoque arcu elementum at nibh hac.
+          </p>
+        </div>
+      </div>
     </div>
+
+    <!-- About 2 goes here -->
+    <div class="w-full mx-auto container my-24">
+      <div class="grid grid-cols-2 px-24 gap-[48px]">
+        <div class="relative w-full overflow-hidden h-[700px]">
+          <div
+            class="absolute top-0 left-0 right-0 bottom-0 bg-[#005982] opacity-50 hover:opacity-0 transition duration-300"
+          ></div>
+          <img
+            src="./src/assets/images/about.png"
+            alt="about"
+            class="w-full h-full object-cover object-center"
+          />
+        </div>
+        <div class="w-full pt-12">
+          <h1
+            class="uppercase font-outfit font-semibold text-7xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] mb-5"
+          >
+            About Us
+          </h1>
+          <p
+            class="font-inter text-4xl font-medium text-[#A7A7A7] leading-[1.5] mb-24"
+          >
+            Lorem ipsum
+            <span class="about-unique text-white relative"
+              >dolor sit
+            </span>
+            amet consectetur. Lacinia nulla lectus in
+            <span class="about-unique text-white relative"
+              >ornare orci.</span
+            >
+            Pulvinar ligula tristique pellentesque
+            <span class="about-unique text-white relative"
+              >fermentum au.</span
+            >
+          </p>
+          <div class="flex items-center gap-3">
+            <h3
+              class="font-inter text-white font-medium text-4xl transition duration-300 hover:text-[#00B0FF]"
+            >
+              See our products
+            </h3>
+            <img
+              src="./src/assets/icons/arrow-right.svg"
+              alt="arrow-right"
+              width="30px"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script src="./src/script.js"></script>
+    <script src="./src/cursor1.js"></script>
   </body>
 </html>
