--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     ></div>
     <div
       id="cursor2"
-      class="fixed w-[52px] h-[52px] border-[#258287] border rounded-full translate-x-[-50%] translate-y-[-50%] duration-500 ease-out bg-transparent z-[-1] pointer-events-none"
+      class="fixed w-[52px] h-[52px] border-[#258287] border rounded-full translate-x-[-50%] translate-y-[-50%] duration-700 ease-out bg-transparent z-50 pointer-events-none"
     ></div>
 
     <!-- Navbar goes here -->
@@ -211,9 +211,17 @@
     </div>
 
     <!-- About 2 goes here -->
-    <div class="w-full mx-auto container my-24">
+    <div
+      class="w-full mx-auto container bg-[#070C0F] rellax"
+      data-rellax-speed="10"
+      data-rellax-desktop-speed="10"
+    >
       <div class="grid grid-cols-2 px-24 gap-[48px]">
-        <div class="relative w-full overflow-hidden h-[700px]">
+        <div
+          class="relative w-full overflow-hidden h-[700px] rellax"
+          data-rellax-speed="6"
+          data-rellax-desktop-speed="10"
+        >
           <div
             class="absolute top-0 left-0 right-0 bottom-0 bg-[#005982] opacity-50 hover:opacity-0 transition duration-300"
           ></div>
@@ -225,12 +233,16 @@
         </div>
         <div class="w-full pt-12">
           <h1
-            class="uppercase font-outfit font-semibold text-7xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] mb-5"
+            class="uppercase font-outfit font-semibold text-7xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] mb-8 rellax"
+            data-rellax-speed="2.5"
+            data-rellax-desktop-speed="-1"
           >
             About Us
           </h1>
           <p
-            class="font-inter text-4xl font-medium text-[#A7A7A7] leading-[1.5] mb-24"
+            class="font-inter text-4xl font-medium text-[#A7A7A7] leading-[1.5] mb-24 rellax"
+            data-rellax-speed="3"
+            data-rellax-desktop-speed="-3"
           >
             Lorem ipsum
             <span class="about-unique text-white relative"
@@ -245,7 +257,11 @@
               >fermentum au.</span
             >
           </p>
-          <div class="flex items-center gap-3">
+          <div
+            class="flex items-center gap-3 rellax"
+            data-rellax-speed="2"
+            data-rellax-desktop-speed="3"
+          >
             <h3
               class="font-inter text-white font-medium text-4xl transition duration-300 hover:text-[#00B0FF]"
             >
@@ -261,8 +277,140 @@
       </div>
     </div>
 
+    <!-- About 3 goes here -->
+    <div
+      class="w-full mx-auto px-24 container rellax mt-[-100px]"
+      data-rellax-desktop-speed="10"
+    >
+      <h3
+        class="font-inter text-[#A7A7A7] font-medium text-3xl mb-16"
+      >
+        Why do you need to choose us?
+      </h3>
+      <div
+        class="w-full border-t-2 border-[#3F3F3F] flex items-center py-16"
+      >
+        <div class="w-[45%] flex items-center">
+          <h1 class="font-outfit font-bold text-white text-6xl">
+            Longevity
+          </h1>
+        </div>
+        <div class="w-[55%] flex items-center">
+          <p class="font-inter font-normal text-[#A7A7A7] text-2xl">
+            Lorem ipsum dolor sit amet consectetur. Lacinia nulla
+            lectus in ornare orci. Pulvinar ligula tristique
+            pellentesque fermentum au.
+          </p>
+        </div>
+      </div>
+      <div
+        class="w-full border-t-2 border-[#3F3F3F] flex items-center py-16"
+      >
+        <div class="w-[45%] flex items-center">
+          <h1 class="font-outfit font-bold text-white text-6xl">
+            Longevity
+          </h1>
+        </div>
+        <div class="w-[55%] flex items-center">
+          <p class="font-inter font-normal text-[#A7A7A7] text-2xl">
+            Lorem ipsum dolor sit amet consectetur. Lacinia nulla
+            lectus in ornare orci. Pulvinar ligula tristique
+            pellentesque fermentum au.
+          </p>
+        </div>
+      </div>
+      <div
+        class="w-full border-t-2 border-b-2 border-[#3F3F3F] flex items-center py-16"
+      >
+        <div class="w-[45%] flex items-center">
+          <h1 class="font-outfit font-bold text-white text-6xl">
+            Longevity
+          </h1>
+        </div>
+        <div class="w-[55%] flex items-center">
+          <p class="font-inter font-normal text-[#A7A7A7] text-2xl">
+            Lorem ipsum dolor sit amet consectetur. Lacinia nulla
+            lectus in ornare orci. Pulvinar ligula tristique
+            pellentesque fermentum au.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Start a project -->
+    <section class="w-full text-center mb-40">
+      <h1
+        class="font-outfit font-bold text-8xl text-transparent bg-clip-text bg-gradient-to-b from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] drop-shadow-lg bg-size-200 bg-pos-0 hover:bg-pos-100 transition-all duration-300 leading-tight"
+      >
+        Start<br />a<br />Project
+      </h1>
+    </section>
+
+    <!-- Footer goes here -->
+    <footer class="w-full">
+      <div class="w-full mx-auto container grid grid-cols-2">
+        <div
+          class="flex flex-col justify-start items-center text-center gap-5 py-20"
+        >
+          <h3
+            class="font-outfit font-semibold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF]"
+          >
+            Contact Us
+          </h3>
+          <h4 class="font-inter font-medium text-xl text-white">
+            gambitrojo@gmail.com
+          </h4>
+          <h4 class="font-inter font-medium text-xl text-white">
+            +62 812 3456789
+          </h4>
+        </div>
+        <div
+          class="flex flex-col justify-start items-center text-center gap-5 py-20"
+        >
+          <h3
+            class="font-outfit font-semibold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF]"
+          >
+            Our Social Media
+          </h3>
+          <div class="flex gap-10 items-center">
+            <a href="#" class="cursor-none">
+              <img
+                src="./src/assets/icons/instagram.svg"
+                alt="instagram"
+                width="40px"
+              />
+            </a>
+            <a href="#" class="cursor-none">
+              <img
+                src="./src/assets/icons/linkedin.svg"
+                alt="linkedin"
+                width="32px"
+              />
+            </a>
+            <a href="#" class="cursor-none">
+              <img
+                src="./src/assets/icons/tiktok.svg"
+                alt="tiktok"
+                width="32px"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="w-full bg-[#1D1D1D] text-center p-4">
+        <h4 class="text-[#A7A7A7] font-inter font-normal text-base">
+          @ 2023 Gambit Rojo All Right Reserved
+        </h4>
+      </div>
+    </footer>
+
     <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
-    <script src="./src/script.js"></script>
-    <script src="./src/cursor1.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
+    <script src="./src/js/cursor1.js"></script>
+    <script>
+      var rellax = new Rellax('.rellax', {
+        center: true,
+      });
+    </script>
   </body>
 </html>
