--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       type="image/svg+xml"
       href="/src/assets/icons/web-icon.svg"
     />
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       rel="preconnect"
@@ -44,11 +45,11 @@
     <!-- Navbar goes here -->
     <nav class="bg-transparent border-gray-200">
       <div
-        class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+        class="w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] flex flex-wrap items-center justify-between py-5"
       >
         <a
           href="/"
-          class="flex items-center font-outfit font-bold text-2xl cursor-none"
+          class="flex items-center font-outfit font-bold text-3xl cursor-none"
         >
           <h1 class="text-[#00B0FF]">
             Gambit<span class="text-white">Rojo</span>
@@ -81,12 +82,12 @@
           id="navbar-default"
         >
           <ul
-            class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:border-0 uppercase tracking-widest"
+            class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 md:mt-0 md:border-0 uppercase tracking-widest text-xl"
           >
             <li>
               <a
                 href="#"
-                class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-[#47ABD8] md:p-0 font-semibold cursor-none"
+                class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:p-0 font-normal cursor-none"
                 aria-current="page"
                 >Home</a
               >
@@ -122,29 +123,32 @@
       <div
         class="w-full h-[90vh] text-center relative flex flex-col justify-center overflow-x-hidden"
       >
-        <div class="w-full relative flex flex-col text-center">
+        <div
+          class="w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] relative flex flex-col text-center"
+        >
           <h1
-            class="font-inter font-thin text-white text-[120px] leading-[0px]"
+            class="font-inter font-thin text-white xl:text-[110px] 2xl:text-[135px] leading-[5px]"
           >
             We are a Social Media
           </h1>
           <h1
-            class="font-outfit font-bold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] text-[182px] drop-shadow-lg bg-size-200 bg-pos-0 hover:bg-pos-100 transition-all duration-300"
+            class="text-bg font-outfit font-black xl:text-[160px] 2xl:text-[190px] text-transparent bg-clip-text bg-[length:120%_120%] bg-[url('https://images.unsplash.com/photo-1561211919-1947abbbb35b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=871&q=80')]"
           >
             Digital Agency
           </h1>
+
           <img
             src="./src/assets/images/logo-3d-transparent.png"
             alt="logo-transparent"
-            class="absolute top-[40%] left-[50%] -translate-x-[50%] -translate-y-[50%] z-[-1] opacity-50"
-            width="371px"
-            height="357px"
+            class="absolute top-[40%] left-[50%] -translate-x-[50%] -translate-y-[50%] z-[-1] opacity-30 xl:w-[30vw]"
           />
         </div>
         <div class="absolute bottom-[30px]">
           <div class="relative flex overflow-x-hidden">
-            <div class="animate-marquee whitespace-nowrap">
-              <p class="font-inter font-light text-white text-2xl">
+            <div class="animate-marquee whitespace-nowrap z-0">
+              <p
+                class="font-inter font-light text-white xl:text-[2vw]"
+              >
                 Lorem ipsum dolor sit amet consectetur, adipisicing
                 elit. Suscipit blanditiis nesciunt dolorum iure nam
                 voluptatum nulla vel corporis earum error, optio
@@ -155,9 +159,11 @@
               </p>
             </div>
             <div
-              class="absolute top-0 animate-marquee2 whitespace-nowrap"
+              class="absolute top-0 animate-marquee2 whitespace-nowrap z-0"
             >
-              <p class="font-inter font-light text-white text-2xl">
+              <p
+                class="font-inter font-light text-white xl:text-[2vw]"
+              >
                 Lorem ipsum dolor sit amet consectetur, adipisicing
                 elit. Suscipit blanditiis nesciunt dolorum iure nam
                 voluptatum nulla vel corporis earum error, optio
@@ -173,8 +179,10 @@
     </section>
 
     <!-- About 1 goes here -->
-    <div class="w-full mx-auto container my-24">
-      <div class="w-full px-24 grid grid-cols-2 gap-[48px]">
+    <div
+      class="w-full my-24 lg:max-w-[1150px] 2xl:max-w-[1366px] mx-auto"
+    >
+      <div class="about-first w-full grid grid-cols-2 gap-[48px]">
         <div class="w-full flex gap-3 justify-around">
           <div class="flex flex-col gap-2 items-center">
             <h1
@@ -212,35 +220,21 @@
 
     <!-- About 2 goes here -->
     <div
-      class="w-full mx-auto container bg-[#070C0F] rellax"
+      class="w-full mx-auto container bg-[#070C0F] rellax mb-48"
       data-rellax-speed="10"
       data-rellax-desktop-speed="10"
     >
-      <div class="grid grid-cols-2 px-24 gap-[48px]">
-        <div
-          class="relative w-full overflow-hidden h-[700px] rellax"
-          data-rellax-speed="6"
-          data-rellax-desktop-speed="10"
-        >
-          <div
-            class="absolute top-0 left-0 right-0 bottom-0 bg-[#005982] opacity-50 hover:opacity-0 transition duration-300"
-          ></div>
-          <img
-            src="./src/assets/images/about.png"
-            alt="about"
-            class="w-full h-full object-cover object-center"
-          />
-        </div>
-        <div class="w-full pt-12">
+      <div class="px-60 w-full relative">
+        <div class="w-full pt-12 relative">
           <h1
-            class="uppercase font-outfit font-semibold text-7xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] mb-8 rellax"
+            class="uppercase font-outfit font-semibold text-7xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] mb-8 rellax z-[3]"
             data-rellax-speed="2.5"
             data-rellax-desktop-speed="-1"
           >
             About Us
           </h1>
           <p
-            class="font-inter text-4xl font-medium text-[#A7A7A7] leading-[1.5] mb-24 rellax"
+            class="w-[100%] font-inter text-4xl font-medium text-[#A7A7A7] leading-[1.5] mb-24 rellax z-[-1] absolute top-[200px]"
             data-rellax-speed="3"
             data-rellax-desktop-speed="-3"
           >
@@ -258,9 +252,9 @@
             >
           </p>
           <div
-            class="flex items-center gap-3 rellax"
-            data-rellax-speed="2"
-            data-rellax-desktop-speed="3"
+            class="flex items-center gap-3 rellax absolute bottom-[-350px]"
+            data-rellax-speed="1"
+            data-rellax-desktop-speed="1"
           >
             <h3
               class="font-inter text-white font-medium text-4xl transition duration-300 hover:text-[#00B0FF]"
@@ -274,12 +268,46 @@
             />
           </div>
         </div>
+        <div class="absolute top-[-50px] left-[120px] z-[-1]">
+          <div
+            class="relative w-full overflow-hidden h-[320px] 2xl:h-[380px] rellax"
+            data-rellax-speed="6"
+            data-rellax-desktop-speed="10"
+          >
+            <div
+              class="absolute top-0 left-0 right-0 bottom-0 bg-[#005982] opacity-50 hover:opacity-0 transition duration-300"
+            ></div>
+            <img
+              src="./src/assets/images/about.png"
+              alt="about"
+              class="w-full h-full object-cover object-center"
+            />
+          </div>
+        </div>
+        <div
+          class="absolute bottom-[-300px] 2xl:bottom-[-350px] right-[120px] z-[-3]"
+        >
+          <div
+            class="relative w-full overflow-hidden h-[250px] 2xl:h-[300px] rellax"
+            data-rellax-speed="6"
+            data-rellax-desktop-speed="10"
+          >
+            <div
+              class="absolute top-0 left-0 right-0 bottom-0 bg-[#005982] opacity-50 hover:opacity-0 transition duration-300"
+            ></div>
+            <img
+              src="./src/assets/images/about-2.png"
+              alt="about"
+              class="w-full h-full object-cover object-center"
+            />
+          </div>
+        </div>
       </div>
     </div>
 
     <!-- About 3 goes here -->
     <div
-      class="w-full mx-auto px-24 container rellax mt-[-100px]"
+      class="w-full lg:max-w-[1150px] 2xl:max-w-[1366px] mx-auto rellax mt-[-100px]"
       data-rellax-desktop-speed="10"
     >
       <h3
@@ -288,7 +316,7 @@
         Why do you need to choose us?
       </h3>
       <div
-        class="w-full border-t-2 border-[#3F3F3F] flex items-center py-16"
+        class="why-us w-full border-t-2 border-[#3F3F3F] flex items-center py-16"
       >
         <div class="w-[45%] flex items-center">
           <h1 class="font-outfit font-bold text-white text-6xl">
@@ -304,11 +332,11 @@
         </div>
       </div>
       <div
-        class="w-full border-t-2 border-[#3F3F3F] flex items-center py-16"
+        class="why-us w-full border-t-2 border-[#3F3F3F] flex items-center py-16"
       >
         <div class="w-[45%] flex items-center">
           <h1 class="font-outfit font-bold text-white text-6xl">
-            Longevity
+            Partnership &<br />Collaboration
           </h1>
         </div>
         <div class="w-[55%] flex items-center">
@@ -320,7 +348,7 @@
         </div>
       </div>
       <div
-        class="w-full border-t-2 border-b-2 border-[#3F3F3F] flex items-center py-16"
+        class="why-us w-full border-t-2 border-b-2 border-[#3F3F3F] flex items-center py-16"
       >
         <div class="w-[45%] flex items-center">
           <h1 class="font-outfit font-bold text-white text-6xl">
@@ -404,9 +432,11 @@
       </div>
     </footer>
 
+    <script src="./src/js/cursor1.js"></script>
+    <script src="./src/js/scrollreveal.js"></script>
     <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
-    <script src="./src/js/cursor1.js"></script>
+
     <script>
       var rellax = new Rellax('.rellax', {
         center: true,
