--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
     <div class="relative w-full">
       <div
-        class="absolute w-[300px] h-[300px] xl:w-[500px] 2xl:w-[700px] 2xl:h-[700px] xl:h-[500px] bg-blue-600 z-[-1] top-[50%] left-[40%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[156px] opacity-[0.6]"
+        class="absolute w-[300px] h-[300px] xl:w-[500px] 2xl:w-[700px] 2xl:h-[700px] xl:h-[500px] bg-blue-800 z-[-1] top-[50%] left-[40%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[156px] opacity-[0.6]"
       ></div>
       <div
-        class="absolute w-[200px] h-[200px] xl:w-[300px] 2xl:w-[400px] 2xl:h-[400px] xl:h-[300px] bg-teal-400 z-[-1] top-[50%] left-[65%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[128px] opacity-[0.6]"
+        class="absolute w-[200px] h-[200px] xl:w-[300px] 2xl:w-[400px] 2xl:h-[400px] xl:h-[300px] bg-[#00B0FF] z-[-1] top-[50%] left-[65%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[128px] opacity-[0.6]"
       ></div>
       <!-- Navbar goes here -->
       <nav class="bg-transparent border-gray-200">
@@ -150,8 +150,8 @@
               class="absolute top-[40%] left-[50%] -translate-x-[50%] -translate-y-[50%] z-[-1] opacity-[0.2] w-56 xl:w-[30vw]"
             />
           </div>
-          <div class="absolute bottom-[30px]">
-            <div class="relative flex overflow-x-hidden">
+          <div class="absolute bottom-[30px] overflow-x-visible">
+            <div class="relative flex overflow-x-visible">
               <div class="animate-marquee whitespace-nowrap z-0">
                 <p
                   class="font-inter font-light text-white text-lg xl:text-[2vw]"
@@ -244,7 +244,7 @@
           class="absolute w-[300px] h-[300px] xl:w-[500px] 2xl:w-[400px] 2xl:h-[400px] xl:h-[500px] bg-blue-600 z-[-1] top-[100%] left-0 sm:left-[25%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[156px] opacity-[1]"
         ></div>
         <div
-          class="absolute w-[250px] h-[250px] xl:w-[300px] 2xl:w-[300px] 2xl:h-[300px] xl:h-[300px] bg-teal-400 z-[-1] top-[350%] sm:top-[250%] right-[0%] -translate-y-[50%] rounded-full blur-[96px] opacity-[0.6]"
+          class="absolute w-[250px] h-[250px] xl:w-[300px] 2xl:w-[300px] 2xl:h-[300px] xl:h-[300px] bg-[#00B0FF] z-[-1] top-[350%] sm:top-[250%] right-[0%] -translate-y-[50%] rounded-full blur-[96px] opacity-[0.6]"
         ></div>
         <div class="px-5 xl:px-60 w-full relative">
           <div class="w-full pt-12 relative">
@@ -404,7 +404,7 @@
     <!-- Start a project -->
     <section class="w-full text-center mb-40">
       <h1
-        class="font-outfit font-bold text-6xl xl:text-8xl text-transparent bg-clip-text bg-gradient-to-b from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] drop-shadow-lg bg-size-200 bg-pos-0 hover:bg-pos-100 transition-all duration-300 leading-tight"
+        class="font-outfit font-bold text-6xl xl:text-[96px] text-transparent bg-clip-text bg-gradient-to-b from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] drop-shadow-lg bg-size-200 bg-pos-0 hover:bg-pos-100 transition-all duration-300 leading-normal"
       >
         Start<br />a<br />Project
       </h1>
